fix(FilterChannels): add vertical overflow css property to the channel list

--- a/webapp/src/AdminSettings/FilterChannels.scss
+++ b/webapp/src/AdminSettings/FilterChannels.scss
@@ -113,6 +113,7 @@
 
       .ChannelSelectorList {
         padding: 0;
+        overflow-y: auto;
 
         .ChannelSelectorListLink {
           border-radius: 0;
